--- a/Shophoto/Shophoto/Views/Collections/Collections.xaml
+++ b/Shophoto/Shophoto/Views/Collections/Collections.xaml
@@ -47,13 +47,14 @@
                 </Border>
                 
             </StackPanel>
+            <TextBlock FontSize="30" Margin="50,60,50,0" Text="{Binding Title,FallbackValue=My Project Collection}"></TextBlock>
             <inputBox:InputBox DataContext="{Binding SearchBoxVM}" Width="200" Height="40"
-                               VerticalAlignment="Top" HorizontalAlignment="Left" 
-                               Margin="50,60,0,0"></inputBox:InputBox>
+                               VerticalAlignment="Top" HorizontalAlignment="Right" 
+                               Margin="0,60,230,0"></inputBox:InputBox>
 
-            <menus:SortDropdownMenu HorizontalAlignment="Center"
+            <menus:SortDropdownMenu HorizontalAlignment="Right"
                                     VerticalAlignment="Top"
-                                    Margin="0,60,130,0"
+                                    Margin="0,60,50,0"
                                     Height="120"
                                     DataContext="{Binding SortDropdownMenuVM}"
                                     ></menus:SortDropdownMenu>
