--- a/Shophoto/Shophoto/Views/Projects/AuxView/CreateProject.xaml
+++ b/Shophoto/Shophoto/Views/Projects/AuxView/CreateProject.xaml
@@ -21,24 +21,42 @@
         <TextBlock Height="55" Padding="55,0,0,0" Margin="0,0,0,10" FontSize="40">
                     Create a new project</TextBlock>
         <Border BorderBrush="Black" BorderThickness="0,2,0,0"
-                        Height="400" Width="700">
+                        Height="440" Width="700">
             <StackPanel>
-                <StackPanel Height="320" Margin="0,10,0,0">
+                <StackPanel Height="430" Margin="0,10,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Background="Transparent" VerticalAlignment="Top"
+                                   Height="40" Width="250" FontSize="25" >Project Name</TextBlock>
+                        <input:InputBox Width="400" Margin="50,0,0,0"
+                                        DataContext="{Binding ProjectNameInputBoxVM}"></input:InputBox>
+                    </StackPanel>
                     <StackPanel Orientation="Horizontal" >
                         <TextBlock Background="Transparent" VerticalAlignment="Top" 
-                                 Height="40" Width="250" FontSize="30">Project Summary</TextBlock>
-                        <input:InputBox Width="400" Height="175" Margin="50,0,0,0"
-                                        DataContext="{Binding LargeInputBoxVM}">
+                                 Height="40" Width="250" FontSize="25">Project Summary</TextBlock>
+                        <input:InputBox Width="400" Height="175" Margin="50,20,0,0"
+                                        DataContext="{Binding ProjectSummaryInputBoxVM}">
                         </input:InputBox>
-                    </StackPanel> 
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                        <TextBlock Background="Transparent" 
+                                   Height="40" Width="300" FontSize="25">Customer Name</TextBlock>
+                        <input:InputBox DataContext="{Binding CustomerNameInputBoxVM}"  Width="400"></input:InputBox>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                        <TextBlock Background="Transparent" 
+                                   Height="40" Width="300" FontSize="25">Customers Email Adresse</TextBlock>
+                        <input:InputBox DataContext="{Binding EmailInputBoxVM}" Width="400"></input:InputBox>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Height="50" Margin="0,20,0,0" VerticalAlignment="Center">
+                        <buttons:IconButton Content="Create" Margin="530,0,0,0" FontSize="30" Height="50" Width="150" VerticalAlignment="Center"
+                                        Background="Transparent" BorderBrush="Black" BorderThickness="2"
+                                        IsEnabled="{Binding CanCreateProject}"
+                                        Command="{Binding CreateProjectCommand}">
+                        </buttons:IconButton>
+                    </StackPanel>
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal" Height="75" Margin="0,0,0,0" VerticalAlignment="Center">
-                    <buttons:IconButton Content="Create" Margin="530,0,0,0" FontSize="30" Height="50" Width="150" VerticalAlignment="Center"
-                                        Background="Transparent" BorderBrush="Black" BorderThickness="4"
-                                        Command="{Binding CreateProjectCommand}">
-                    </buttons:IconButton>
-                </StackPanel>
+                
             </StackPanel>
         </Border>
     </StackPanel>
