--- a/Shophoto/Shophoto/MainWindow.xaml
+++ b/Shophoto/Shophoto/MainWindow.xaml
@@ -8,13 +8,13 @@
         xmlns:menus="clr-namespace:Shophoto.Menus"
         xmlns:buttons="clr-namespace:Shophoto.Buttons"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1080"
+        Title="MainWindow" Height="720" 
         DataContext="{Binding MainWindowVM, Source={StaticResource NinjectLocator}}"
         SizeToContent="Width">
-    <Grid>
-        <StackPanel Orientation="Horizontal" Width="1080">
+    <Grid HorizontalAlignment="Stretch">
+        <StackPanel Width="Auto" Orientation="Horizontal">
             <menus:SideMenu HorizontalAlignment="Left" DataContext="{Binding SideMenuVM}"></menus:SideMenu>
-            <views:MainView DataContext="{Binding MainViewVM}"></views:MainView>
+            <views:MainView HorizontalAlignment="Stretch" DataContext="{Binding MainViewVM}"></views:MainView>
         </StackPanel>
     </Grid>
 </Window>
