--- a/Shophoto/Shophoto/MainWindow.xaml
+++ b/Shophoto/Shophoto/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:views="clr-namespace:Shophoto.Views"
         xmlns:menus="clr-namespace:Shophoto.Menus"
         xmlns:buttons="clr-namespace:Shophoto.Buttons"
+        xmlns:common="clr-namespace:Shophoto.Views.Common"
         mc:Ignorable="d"
         Title="MainWindow" Height="720" 
         DataContext="{Binding MainWindowVM, Source={StaticResource NinjectLocator}}"
